refactor: secure private key loading and improve error handling
- Removed classpath dependency for private-key.pem to prevent bundling sensitive keys in the JAR/repo.

- Implemented external secret loading via application.yml and environment variables.

- Added explicit file existence validation to throw clear exceptions instead of NullPointerException.

- Updated JWT generation logic to be production-ready and secure.